# object-introspection

./: .clang-format  .clang-tidy  .editorconfig  .git-blame-ignore-revs  .gitignore  .gitmodules  404.html  CMakeLists.txt  CONTRIBUTING.md  README.md  README.org  dev.oid.toml  flake.nix  index.html  markdown-page.html  oss.oid.toml  sitemap.xml
.circleci/: config.yml
.github/: pull_request_template.md
.github/workflows/: ci.yml  deploy.yml  object-introspection.yml  test-deploy.yml  test-report.yml  tests_failing_under_nix.txt
assets/css/: styles.426a5584.css  styles.c07a78ed.css  styles.d5d2c302.css  styles.f14e14d7.css
assets/js/: 0058b4c6.4afb906e.js  0e384e19.1029a620.js  237.c53dde98.js  (+119 more)
cmake/: CompilerWarnings.cmake  FindLLDB.cmake  FindRocksDB.cmake  FindThrift.cmake  Finduring.cmake  Findzstd.cmake  StandardProjectSettings.cmake
docs/: addrbook-funcargs.html  addrbook-intro.html  addrbook-this.html  constraints.html  contributing.html  getting-started.html  intro.html
include/: ObjectIntrospection.h
oi/: CMakeLists.txt  CodeGen.cpp  CodeGen.h  Common.h  Config.cpp  Config.h  ContainerInfo.cpp  ContainerInfo.h  ContainerTypeEnum.h  Descs.cpp  Descs.h  DrgnUtils.cpp  DrgnUtils.h  EnumBitset.h  Features.cpp  Features.h  FuncGen.cpp  FuncGen.h  Headers.h  IntrospectionResult.cpp  Metrics.cpp  Metrics.h  OICache.cpp  OICache.h  OICodeGen.cpp  OICodeGen.h  OICompiler.cpp  OICompiler.h  OID.cpp  OIDebugger.cpp  OIDebugger.h  OIGenerator.cpp  OIGenerator.h  OILexer.h  OILexer.l  OILibrary.cpp  OILibraryImpl.cpp  OILibraryImpl.h  OIOpts.h  OIParser.h  (+18 more)
oi/arch/: Arch.h  aarch64.cpp  x86_64.cpp
oi/exporters/: CSV.cpp  Json.cpp  ParsedData.cpp  TypeCheckingWalker.cpp  TypeCheckingWalker.h
oi/exporters/test/: TypeCheckingWalkerTest.cpp
oi/support/: Toml.cpp  Toml.h
oi/type_graph/: AddChildren.cpp  AddChildren.h  AddPadding.cpp  AddPadding.h  AlignmentCalc.cpp  AlignmentCalc.h  CMakeLists.txt  ClangTypeParser.cpp  ClangTypeParser.h  ClangTypeParserTest.cpp  CycleFinder.cpp  CycleFinder.h  DrgnExporter.cpp  DrgnExporter.h  DrgnParser.cpp  DrgnParser.h  EnforceCompatibility.cpp  EnforceCompatibility.h  Flattener.cpp  Flattener.h  IdentifyContainers.cpp  IdentifyContainers.h  KeyCapture.cpp  KeyCapture.h  LLDBParser.cpp  LLDBParser.h  NameGen.cpp  NameGen.h  NodeTracker.h  PassManager.cpp  PassManager.h  Printer.cpp  Printer.h  Prune.cpp  Prune.h  RemoveIgnored.cpp  RemoveIgnored.h  RemoveMembers.cpp  RemoveMembers.h  RemoveTopLevelPointer.cpp  (+10 more)
oi/types/test/: StaticTest.cpp
resources/: CMakeLists.txt
src/: CMakeLists.txt  Common.h  ContainerInfo.cpp  ContainerInfo.h  Descs.cpp  Descs.h  DrgnUtils.cpp  DrgnUtils.h  Features.h  FuncGen.cpp  FuncGen.h  Metrics.cpp  Metrics.h  OICache.cpp  OICache.h  OICodeGen.cpp  OICodeGen.h  OICompile.cpp  OICompiler.cpp  OICompiler.h  OID.cpp  OIDebugger.cpp  OIDebugger.h  OIGenerator.cpp  OIGenerator.h  OILexer.h  OILexer.l  OILibrary.cpp  OILibraryImpl.cpp  OILibraryImpl.h  OIOpts.h  OIParser.h  OIParser.yy  OITraceCode.cpp  OIUtils.cpp  OIUtils.h  PaddingHunter.cpp  PaddingHunter.h  Serialize.cpp  Serialize.h  (+8 more)
test/: CMakeLists.txt  Makefile  TARGETS  TypeGraphParser.cpp  TypeGraphParser.h  ci.oid.toml  convert_to_junit.sh  ctest_to_junit.xsl  inlined_test.cpp  inlined_test_flatten.oid  inlined_test_flatten_combine.oid  integration.py  integration_cycles.cpp  integration_cycles_raw.oid  integration_cycles_shared.oid  integration_cycles_unique.oid  integration_entry_badFunc_arg0.oid  integration_entry_doStuff_arg0_arg1.oid  integration_entry_doStuff_this.oid  integration_entry_incVectSize_arg0.oid  integration_entry_inc_arg0.oid  integration_entry_inc_this.oid  integration_global_myGlobalFoo.oid  integration_mt.cpp  integration_mt_entry_doStuff_arg0.oid  integration_mttest.cpp  integration_packed.cpp  integration_return_doStuff_arg0.oid  integration_return_doStuff_retval.oid  integration_return_incN_arg0.oid  integration_return_inc_this.oid  integration_sleepy.cpp  main.cpp  mapiter.cpp  mocks.h  mttest.h  mttest1.cpp  mttest2.cpp  mttest2_do_it_arg0_script_void_pointer.oid  mttest2_do_stuff_arg0_script.oid  (+34 more)
test/integration/: CMakeLists.txt  README.md  alignment.toml  anonymous.toml  arrays.toml  bitfields.toml  capture_keys.toml  container_enums.toml  cycles.toml  enums.toml  enums_params.toml  fbstring.toml  folly_f14_fast_map.toml  folly_f14_fast_set.toml  folly_f14_node_map.toml  folly_f14_node_set.toml  folly_f14_value_map.toml  folly_f14_value_set.toml  folly_f14_vector_map.toml  folly_f14_vector_set.toml  folly_shims.cpp  folly_small_vector.toml  folly_sorted_vector_map.toml  gen_tests.py  ignored.toml  inheritance_access.toml  inheritance_multiple.toml  inheritance_polymorphic.toml  inheritance_polymorphic_diamond.toml  inheritance_polymorphic_non_dynamic_base.toml  multi_arg.toml  namespaces.toml  packed.toml  padding.toml  pointers.toml  pointers_function.toml  pointers_incomplete.toml  primitives.toml  references.toml  runner_common.cpp  (+41 more)
tools/: OILGen.cpp  OIP.cpp  OIRP.cpp  OITB.cpp  combine_configs.py  config_gen.py  inline_stats.py
types/: README.md  array_type.toml  boost_bimap_type.toml  caffe2_blob_type.toml  cxx11_list_type.toml  cxx11_string_type.toml  deque_list_type.toml  f14_fast_map.toml  f14_fast_set.toml  f14_node_map.toml  f14_node_set.toml  f14_value_map.toml  f14_value_set.toml  f14_vector_map.toml  f14_vector_set.toml  fb_string_type.toml  folly_iobuf_queue_type.toml  folly_iobuf_type.toml  folly_optional_type.toml  folly_small_heap_vector_map.toml  list_type.toml  map_seq_type.toml  multi_map_type.toml  multi_set_type.toml  optional_type.toml  pair_type.toml  priority_queue_container_adapter_type.toml  queue_container_adapter_type.toml  ref_wrapper_type.toml  repeated_field_type.toml  repeated_ptr_field_type.toml  seq_type.toml  set_type.toml  shrd_ptr_type.toml  small_vec_type.toml  sorted_vec_set_type.toml  stack_container_adapter_type.toml  std_char_traits.toml  std_map_type.toml  std_unordered_map_type.toml  (+9 more)
website/: docusaurus.config.js  package-lock.json  package.json  sidebars.js
(+31 files in other folders)
